--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "mongoose": "5.9.12",
     "mongoose-unique-validator": "2.0.3",
     "morgan": "^1.10.0",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "bluebird": "^3.7.2"
   },
   "devDependencies": {
-    "bluebird": "^3.7.2",
     "nodemon": "^2.0.3"
   }
 }
