--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bluebird": "^3.7.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "bluebird": "^3.7.2"
   }
 }
